--- a/debian/wikistats/DEBIAN/control
+++ b/debian/wikistats/DEBIAN/control
@@ -1,12 +1,12 @@
 Package: wikistats
-Version: 2.1
+Version: 2.5
 Architecture: all
 Maintainer: Daniel Zahn <dzahn@wikimedia.org>
-Installed-Size: 26
+Installed-Size: 332
 Depends: php5-cli
 Section: web
 Priority: extra
 Homepage: http://wikistats.wmflabs.org
-Description: a Mediawiki statistics project using PHP
+Description: Mediawiki statistics project using PHP
  A project to fetch statistics from thousands of Mediawiki installations
  on the web and display them as HTML and Mediawiki syntax tables.
