--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Daniel Zahn <dzahn@wikimedia.org>
 Build-Depends: debhelper (>= 9.0.0)
 Standards-Version: 3.9.3
-Homepage: http://wikistats.wmflabs.org
+Homepage: https://wikistats.wmcloud.org
 Vcs-Git: https://gerrit.wikimedia.org//r/p/operations/debs/wikistats.git
 Vcs-Browser: https://gerrit.wikimedia.org/r/gitweb?p=operations/debs/wikistats.git;a=tree
 
